Make knesset queries more robust
